--- a/Linux/i3/config
+++ b/Linux/i3/config
@@ -16,8 +16,10 @@ set $mod Mod4
 font pango:monospace 8
 
 #autostart
-exec --no-startup-id hsetroot -fill ~/wallpaper.png
-exec --no-startup-id compton -b
+exec --no-startup-id hsetroot -fill /home/gtc/Pictures/wallpaper/one3.jpg &
+exec --no-startup-id compton -b &
+exec --no-startup-id copyq 
+
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -25,12 +27,11 @@ exec --no-startup-id compton -b
 
 # common apps keybinds
 bindsym $mod+b exec firefox
-bindsym $mod+l exec i3lock -i ~/wallpaper.png
+bindsym $mod+l exec i3lock -i /home/gtc/Pictures/wallpaper/one3.jpg
 bindsym $mod+w exec flameshot gui
-
-
-
-
+bindsym $mod+c exec zenity --calendar
+bindsym $mod+Shift+v exec copyq menu
+# bindsym $mod+m move workspace to output left
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -140,6 +141,23 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+
+
+
+workspace 1 output eDP-1
+workspace 2 output eDP-1
+workspace 3 output eDP-1
+workspace 4 output eDP-1
+workspace 5 output eDP-1
+workspace 6 output HDMI-1-2
+workspace 7 output HDMI-1-2
+workspace 8 output HDMI-1-2
+workspace 9 output HDMI-1-2
+workspace 10 output HDMI-1-2
+
+
+
+
 # switch to workspace
 bindsym $mod+ampersand workspace number $ws1
 bindsym $mod+eacute workspace number $ws2
@@ -232,7 +250,8 @@ for_window [class=Viewnior|feh|Audacious|File-roller|Lxappearance|Lxtask|Pavucon
 for_window [class=URxvt|Firefox|Geany|Evince|Soffice|libreoffice*|mpv|Ghb|Xfburn|Gimp*|Inkscape|Vlc|Lxappearance|Audacity] focus
 for_window [class=Xfburn|GParted|System-config-printer.py|Lxtask|Pavucontrol|Exo-helper*|Lxrandr|Arandr] focus
 
-
+for_window [class="Gnome-calculator"] floating enable, move position 900 px 450 px
+for_window [instance="^copyq$" class="^copyq$"] border pixel 1, floating enable
 
 
 # colour of border, background, text, indicator, and child_border
